Added DeleteOpening on swagger documentation
